--- a/catebza/src/Components/styleMobile.css
+++ b/catebza/src/Components/styleMobile.css
@@ -308,8 +308,8 @@
         border:groove 5px #d0f2bd;
     }
     .ReelPages{
-        width: 90%;
-        margin: 0 auto;
+        width: 95%;
+        margin: auto auto;
     }
     .productWrapper{
         width: 100%;
@@ -317,9 +317,11 @@
         min-height: calc(100vh - 75px);
         font-family:miriamRegular;
         display: flex;
+        flex-direction: column;
         background-color: #d0f2bd;
         align-items: center;
         padding-top: 75px;
+        
     }
     .sc-bdfBwQ{
         height: 15px;
