--- a/catebza/src/Components/style.css
+++ b/catebza/src/Components/style.css
@@ -103,12 +103,7 @@ nav li{
     font-family: miriamBold;
     font-size:25px;
 }
-#mainGallery section{
-    height: calc(100vh - 120px);
-    border: 1px solid green;
-    width: 98%;
-    margin: auto;
-}
+
 .thumbs-wrapper{
     display: none;
 }
@@ -117,6 +112,20 @@ nav a:hover{
 }
 nav a{
     color: black;
+}
+#MainGallery{
+    height: calc(100vh - 120px);
+    border:5px solid green;
+    width:99%;
+    margin:auto;
+    border-radius: 15px;
+}
+#MainGallery img{
+    height: calc(100vh - 120px);
+    width: 100%;
+}
+#MainGallery section{
+    border-radius: 15px;
 }
 
 .contactDetails{
