--- a/catebza/src/Components/styleMobile.css
+++ b/catebza/src/Components/styleMobile.css
@@ -17,6 +17,7 @@
     }
     nav{
         display: flex;
+        flex-direction: row-reverse;
         min-width: 100vw;
         flex-wrap: wrap;
         background-color: #35EF2E;
@@ -40,15 +41,26 @@
     }
     .mobileMenu{
         height:35px;
-        margin-left:3%;
         margin-top: 1%;
         background-color: #35EF2E;
+        margin-right: 5vw;
     }
     
     .mainLogo{
         height: 50px;
-        margin-left: auto;
-    }nav a{
+        margin-right: auto;
+    }
+    .mainLogoAnchor-inactive{
+        margin-right: auto;
+        margin-left: 5vw;
+        
+    }
+    .mainLogoAnchor-active{
+        margin-right: auto;
+        margin-left: 5vw;
+        
+    }
+    nav a{
         color: black;
     }
     .mainLogo img{
