--- a/catebza/src/Components/style.css
+++ b/catebza/src/Components/style.css
@@ -190,6 +190,9 @@ nav a{
     background-color: #d0f2bd;
     min-height:100vh;
 }
+.productsHeading, .contactSection h1{
+    padding-top: 75px;
+}
 h1{
     margin-top:0;
     padding-top:2%;
@@ -267,12 +270,6 @@ button{
     text-transform: uppercase;
     color:white;
     cursor:pointer;
-}
-
-#aboutUs{
-    font-family:miriamBold;
-    width:80%;
-    margin: 0 auto;
 }
 
 .banana-front,.atchaar-front,.atchaarDye-front,.atchaarSpice-front{
