--- a/catebza/src/Components/styleIpad.css
+++ b/catebza/src/Components/styleIpad.css
@@ -169,6 +169,9 @@
         background-color: #d0f2bd;
         min-height:100vh;
     }
+    .productsHeading, .contactSection h1{
+        padding-top: 75px;
+    }
     h1{
         margin-top:0;
         padding-top:2%;
@@ -207,7 +210,7 @@
         margin:auto auto;
     }
     .contactSection{
-        min-height:100vh;
+        min-height:120vh;
         margin: 0 auto;
         background-color: #d0f2bd;
     }
