Modified the home page links and the submit button css

--- a/catebza/src/Components/styleIpad.css
+++ b/catebza/src/Components/styleIpad.css
@@ -255,6 +255,7 @@
         text-transform: uppercase;
         color:white;
         cursor:pointer;
+        border-radius: 10px;
     }
     
     #aboutUs{
