--- a/catebza/src/Components/style.css
+++ b/catebza/src/Components/style.css
@@ -270,6 +270,7 @@ button{
     text-transform: uppercase;
     color:white;
     cursor:pointer;
+    border-radius: 10px;
 }
 
 .banana-front,.atchaar-front,.atchaarDye-front,.atchaarSpice-front{
