--- a/catebza/src/Components/styleMobile.css
+++ b/catebza/src/Components/styleMobile.css
@@ -205,6 +205,7 @@
         color:white;
         cursor:pointer;
         font-size: 15px;
+        border-radius: 10px;
     }
     textarea{
         height: 75px;
