Modified the mobile Banner
Changed the source of the mobile banner to be fetched a local database

--- a/catebza/src/Components/style.css
+++ b/catebza/src/Components/style.css
@@ -75,7 +75,9 @@ nav li{
 }
 
 /*Wrapper */
-
+.loadingMobileBanner, .mobileBanner{
+    display: none;
+}
 .landingPage{
     width: 100%;
     margin: 0 auto;
