--- a/catebza/src/Components/style.css
+++ b/catebza/src/Components/style.css
@@ -160,18 +160,21 @@ nav a{
 /* Products Page */
 
 .productsDiv{
-    display:grid;
-    width:80%;
-    margin: 0 auto;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas:
-        "banana atchaar dye"
-        ". spice . ";
-    font-family: miriamBold;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    padding-top: 100px;
 }
-.bananaSection{
-    grid-area:banana;
-    visibility:visible;
+.products-gallery{
+    width: 225px;
+    background-color: wheat;
+    height: 320px;
+    margin-left: 75px;
+        
+}
+.productName{
+    position:absolute;
+    bottom: 0;
 }
 .atchaarSection{
     grid-area:atchaar;
@@ -189,11 +192,18 @@ nav a{
     border-radius:20px;
 }
 .productSection{
-    background-color: #d0f2bd;
-    min-height:100vh;
+    padding-top: 150px;
 }
 .productsHeading, .contactSection h1{
-    padding-top: 75px;
+    
+    margin-left: 75px;
+    font-size: 30px;
+    font-weight:bold
+
+}
+.productSubheading1{
+    margin-top: 25px;
+    margin-left: 75px;
 }
 h1{
     margin-top:0;
