--- a/catebza/src/Components/style.css
+++ b/catebza/src/Components/style.css
@@ -167,11 +167,30 @@ nav a{
 }
 .products-gallery{
     width: 225px;
-    background-color: wheat;
+    background-color: #D9D9D9;
     height: 320px;
     margin-left: 75px;
+    position:relative;
+}
         
 }
+.products-gallery p{
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height: 40px;
+    margin: 0;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
+.products-gallery:hover{
+    box-shadow: 15px -15px 15px grey;
+    border: 5px solid rgba(0,149,5,0.66);
+}    
 .productName{
     position:absolute;
     bottom: 0;
@@ -185,14 +204,9 @@ nav a{
 .spiceSection{
     grid-area:spice
 }
-.productsDiv img{
-    width:200px;
-    height:210px;
-    border:solid 7.5px  green;
-    border-radius:20px;
-}
 .productSection{
     padding-top: 150px;
+    height: 100vh;
 }
 .productsHeading, .contactSection h1{
     
@@ -333,7 +347,7 @@ button{
         background-color: #d0f2bd;
         align-items: center;
     }
-}
+
 
 
 
