improved network payload
Downsized the background image to improve the performance on initial loading.

--- a/catebza/src/Components/style.css
+++ b/catebza/src/Components/style.css
@@ -83,7 +83,7 @@ nav li{
     margin: 0 auto;
     height: 100vh;
     overflow: hidden;
-    background-image: url("./Media/Landing\ Page\ image.png");
+    background-image: url("./Media/LandingPageImage.jpg");
     background-size: 100% 100%;
     display: flex;
     background-repeat: no-repeat;
