--- a/catebza/src/Components/styleIpad.css
+++ b/catebza/src/Components/styleIpad.css
@@ -84,7 +84,7 @@
         margin: 0 auto;
         height: 100vh;
         overflow: hidden;
-        background-image: url("./Media/Landing\ Page\ image.png");
+        background-image: url("./Media/LandingPageImage.jpg");
         background-size: 100% 100%;
         background-repeat: no-repeat;
         display: flex;
