--- a/catebza/src/Components/styleIpad.css
+++ b/catebza/src/Components/styleIpad.css
@@ -134,46 +134,49 @@
     #MainGallery section{
         border-radius: 15px;
     }
-    
     .productsDiv{
-        display:grid;
-        width:80%;
-        margin: 0 auto;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas:
-            "banana atchaar"
-            "dye spice";
-        font-family: miriamBold;
-        padding-top:25px;
+        display: flex;
+        flex-direction: row;
+        padding-top: 75px;
+        width: 100vw;
     }
-    .bananaSection{
-        grid-area:banana;
-        visibility:visible;
+    .products-gallery{
+        background-color: #d9d9d9;
+        width: 18%;
+        height: 200px;
+        margin-left:5%;
+        position: relative;
     }
-    .atchaarSection{
-        grid-area:atchaar;
+    .products-gallery p{
+        position: absolute;
+        bottom:0;
+        width: 100%;
+        display: flex;
+        margin: 0;
+        background-color: black;
+        height: 30px;
+        justify-content: center;
+        color: white;
+        align-items: center;
+        font-weight: bold;
     }
-    .dyeSection{
-        grid-area:dye;
-    }
-    .spiceSection{
-        grid-area:spice
-    }
-    .productsDiv img{
-        width:150px;
-        height:150px;
-        border:solid 7.5px  green;
-        border-radius:20px;
-    }
+    .products-gallery:hover{
+        box-shadow: 15px -15px 15px grey;
+        border: 5px solid rgba(0,149,5,0.66);
+    } 
     .productsHeading{
         font-size:25px;
     }
     .productSection{
-        background-color: #d0f2bd;
         min-height:100vh;
+        padding-top: 100px;
     }
     .productsHeading, .contactSection h1{
-        padding-top: 75px;
+        margin-left:50px
+    }
+    .productSubheading1, .contactSection h2{
+        margin-top: 25px;
+        margin-left: 50px;
     }
     h1{
         margin-top:0;
@@ -215,7 +218,6 @@
     .contactSection{
         min-height:100vh;
         margin: 0 auto;
-        background-color: #d0f2bd;
     }
     .contactSection h1{
         font-size:25px;
