--- a/catebza/src/Components/style.css
+++ b/catebza/src/Components/style.css
@@ -166,10 +166,10 @@ nav a{
     padding-top: 100px;
 }
 .products-gallery{
-    width: 225px;
+    width: 18%;
     background-color: #D9D9D9;
     height: 320px;
-    margin-left: 75px;
+    margin-left: 5%;
     position:relative;
 }
 .products-gallery p{
